github cicd workflow actions

--- a/api/.env.testing
+++ b/api/.env.testing
@@ -1,5 +1,5 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Jirafy-test
+APP_ENV=testing
 APP_KEY=base64:9v3JzEmNQt6wKUY/0tYd9FCRRJIeGikSCdje3DA1fhw=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=jirafy
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_PORT=5432
+DB_DATABASE=jirafy_test
+DB_USERNAME=postgres
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
