--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -11,18 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      mysql:
-        image: mysql:8
+      postgres:
+        image: postgres:15
         env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: jirafy_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: jirafy_test
         ports:
-          - 3306:3306
+          - 5432:5432
         options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - uses: actions/checkout@v4
@@ -31,7 +32,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "8.2"
-          extensions: mbstring, pdo, pdo_mysql, dom, fileinfo
+          extensions: mbstring, pdo, pdo_pgsql, dom, fileinfo, xml, zip, bcmath
           coverage: none
 
       - name: Cache Composer dependencies
@@ -39,39 +40,61 @@ jobs:
         with:
           path: api/vendor
           key: ${{ runner.os }}-composer-${{ hashFiles('api/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: Install Composer dependencies
-        run: composer install --prefer-dist --no-interaction --no-progress
+        run: composer install --prefer-dist --no-interaction --no-progress --no-dev
         working-directory: api
 
       - name: Copy .env
-        run: cp .env.example .env
+        run: cp .env.testing .env
         working-directory: api
 
       - name: Generate application key
         run: php artisan key:generate
         working-directory: api
 
-      - name: Wait for MySQL
-        run: |
-          until mysqladmin ping -h"127.0.0.1" -uroot -proot --silent; do
-            sleep 1
-          done
-
       - name: Run migrations
         run: php artisan migrate --force
         env:
-          DB_CONNECTION: mysql
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
           DB_DATABASE: jirafy_test
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: postgres
+          DB_PASSWORD: password
         working-directory: api
 
-      - name: Run tests
-        run: php artisan test --testsuite=Unit,Feature
+      - name: Seed database
+        run: php artisan db:seed --force
         env:
-          DB_CONNECTION: mysql
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
           DB_DATABASE: jirafy_test
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: postgres
+          DB_PASSWORD: password
         working-directory: api
+
+      - name: Run PHPUnit tests
+        run: php artisan test
+        env:
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_DATABASE: jirafy_test
+          DB_USERNAME: postgres
+          DB_PASSWORD: password
+        working-directory: api
+
+      - name: Run Codeception Acceptance tests (optional)
+        run: vendor/bin/codecept run acceptance
+        env:
+          DB_CONNECTION: pgsql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_DATABASE: jirafy_test
+          DB_USERNAME: postgres
+          DB_PASSWORD: password
+        working-directory: api
+        continue-on-error: true
