--- a/.github/workflows/deployClient.yml
+++ b/.github/workflows/deployClient.yml
@@ -21,27 +21,12 @@ jobs:
       - name: Build React app
         run: |
           cd client
-          # Configuration pour pointer vers l'API
-          echo "VITE_API_URL=https://jirafyapi.garage404.com" > .env.production
+          # Configuration pour pointer vers l'API (remplacez par votre vrai domaine API)
+          echo "VITE_API_URL=https://jirafy.garage404.com/" > .env.production
           npm ci
           npm run build
 
-      - name: Clean and deploy to server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cd /home/antoine/webapps/jirafy
-
-            # Nettoyer complètement le dossier (supprimer tout le projet existant)
-            echo "=== Cleaning existing files ==="
-            rm -rf * .*  2>/dev/null || true
-
-            echo "=== Client folder cleaned ==="
-
-      - name: Deploy built files
+      - name: Deploy to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -77,5 +62,5 @@ jobs:
             chmod -R 755 .
 
             echo "✅ Client deployment completed!"
-            echo "Files in directory:"
+            echo "Files deployed:"
             ls -la
