feat: add workflow service and hooks for managing project transitions
- Added `workflowService` for API interactions related to workflow transitions.
- Implemented hooks `useProjectWorkflow`, `useCreateTransition`, and `useDeleteTransition` for managing transitions in projects.
- Introduced `WorkflowDiagram` and `WorkflowEditor` components for visualizing and editing workflows.
- Updated `ProjectCreationForm` and `AppSidebar` to integrate new hooks and services.
- Enhanced `Workflow` page to allow project selection and toggle between editing and viewing modes.
- Added support for available statuses in the workflow editor.
- Improved permission checks for managing workflows and transitions.

--- a/.github/workflows/deployClient.yml
+++ b/.github/workflows/deployClient.yml
@@ -61,6 +61,6 @@ jobs:
             chmod 644 .htaccess
             chmod -R 755 .
 
-            echo "✅ Client deployment completed!"
+            echo " Client deployment completed!"
             echo "Files deployed:"
             ls -la
