--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -66,4 +66,4 @@ jobs:
             docker-compose ps
             curl -f http://localhost:8000/api/health || echo "API health check failed"
 
-            echo "✅ Deployment completed!"
+            echo " Deployment completed!"
