--- a/.github/workflows/deployApi.yml
+++ b/.github/workflows/deployApi.yml
@@ -53,4 +53,4 @@ jobs:
             docker-compose ps
             docker-compose logs --tail=20 app
 
-            echo "✅ API deployment completed!"
+            echo " API deployment completed!"
