--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     environment:
       POSTGRES_DB: jirafy
       POSTGRES_USER: jirafy_user
-      POSTGRES_PASSWORD: Password1234!
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-Password1234!}
       PGDATA: /var/lib/postgresql/data/pgdata
-    ports:
-      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -18,9 +16,12 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    # Pas de port exposé en prod pour la sécurité
 
   api:
-    image: antoni0699/jirafy-api:latest
+    build:
+      context: ./api
+      dockerfile: dockerfile
     ports:
       - "8000:80"
     environment:
@@ -29,51 +30,20 @@ services:
       - DB_PORT=5432
       - DB_DATABASE=jirafy
       - DB_USERNAME=jirafy_user
-      - DB_PASSWORD=Password1234!
-      - APP_KEY=base64:c0QPWZvC0c5ofCq2vtO8NJI4qDkacmaE4H09t3wSI5I=
+      - DB_PASSWORD=${DB_PASSWORD:-Password1234!}
+      - APP_KEY=${APP_KEY:-base64:c0QPWZvC0c5ofCq2vtO8NJI4qDkacmaE4H09t3wSI5I=}
       - APP_ENV=production
       - APP_DEBUG=false
       - APP_URL=https://jirafy.cda6.garage404.com
       - APP_FRONTEND_URL=https://jirafy.cda6.garage404.com
+      - JWT_SECRET=${JWT_SECRET:-your_jwt_secret_here}
     depends_on:
       db:
         condition: service_healthy
-    restart: unless-stopped
-    command: >
-      sh -c "
-        echo '=== Waiting for database ===' &&
-        sleep 15 &&
-        echo '=== Running migrations ===' &&
-        php artisan migrate --force &&
-        echo '=== Running admin seeder ===' &&
-        php artisan db:seed --class=AdminSeeder --force &&
-        echo '=== Starting Apache ===' &&
-        apache2-foreground
-      "
-
-  client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
-    ports:
-      - "3000:80"
-    environment:
-      - REACT_APP_API_URL=https://jirafy.cda6.garage404.com/api
-    depends_on:
-      - api
-    restart: unless-stopped
-
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - api
-      - client
+      - api_storage:/var/www/html/storage
     restart: unless-stopped
 
 volumes:
   db_data:
+  api_storage:
